welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:-6: error: Missing closing brace `}' assumed here
try {
^extrema:1: error: expected class or object definition
def extrema(nums:Array[Int]): Int = {
^